added checkout page, checkout item component and update cart to use selectors from reselect

--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -15,7 +15,12 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
+  }
+
+  .empty-message {
+    font-size: 18px;
+    margin: 45px;
   }
 
   button {
